// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should return result 1`] = `
Object {
  "altNames": Array [],
  "copyright": "section copyright",
  "demo": false,
  "description": "Playrun description",
  "difficulty": 4,
  "difficultyXtra": "X",
  "distance": 2.44,
  "drop": 101.1,
  "duration": 10,
  "favorite": false,
  "flows": null,
  "flowsText": "Playrun flows",
  "gauge": Object {
    "code": "nor1",
    "flowUnit": "m3/s",
    "latestMeasurement": null,
    "levelUnit": "cm",
    "location": null,
    "name": "Norway gauge 1",
    "source": Object {
      "name": "Norway",
      "termsOfUse": null,
    },
    "url": "http://yarr.ru",
  },
  "helpNeeded": "please proofread this",
  "hidden": false,
  "levels": Object {
    "approximate": false,
    "formula": null,
    "impossible": null,
    "maximum": null,
    "minimum": 100,
    "optimum": null,
  },
  "license": Object {
    "name": "Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)",
    "slug": "CC_BY-SA",
    "url": "https://creativecommons.org/licenses/by-sa/4.0/",
  },
  "media": Object {
    "count": 0,
    "nodes": Array [],
  },
  "name": "Playrun",
  "pois": Array [
    Object {
      "coordinates": Array [
        10,
        12,
        0,
      ],
      "description": "pt 1 d",
      "kind": "other",
      "name": "playrun pt 1",
    },
    Object {
      "coordinates": Array [
        33,
        34,
        0,
      ],
      "description": "pt 2 d",
      "kind": "portage",
      "name": "playrun pt 2",
    },
  ],
  "putIn": Object {
    "coordinates": Array [
      33,
      33,
      0,
    ],
    "kind": "put-in",
  },
  "rating": 5,
  "region": Object {},
  "river": Object {
    "altNames": Array [
      "Shoa",
      "Sjøa",
    ],
    "name": "Sjoa",
  },
  "season": "Playrun season",
  "seasonNumeric": Array [
    1,
    2,
    3,
  ],
  "shape": Array [
    Array [
      33,
      33,
      0,
    ],
    Array [
      34,
      42,
      0,
    ],
    Array [
      34,
      43,
      0,
    ],
  ],
  "tags": Array [
    Object {
      "category": "kayaking",
      "name": "Waterfalls",
    },
    Object {
      "category": "hazards",
      "name": "Undercuts",
    },
  ],
  "takeOut": Object {
    "coordinates": Array [
      34,
      43,
      0,
    ],
    "kind": "take-out",
  },
  "verified": true,
}
`;

exports[`update should return result 1`] = `
Object {
  "altNames": Array [],
  "copyright": "section copyright",
  "demo": false,
  "description": "Playrun description",
  "difficulty": 4,
  "difficultyXtra": "X",
  "distance": 2.44,
  "drop": 101.1,
  "duration": 10,
  "favorite": false,
  "flows": null,
  "flowsText": "Playrun flows",
  "gauge": Object {
    "code": "gal1",
    "flowUnit": "m3/s",
    "latestMeasurement": Object {
      "flow": null,
      "level": 1.2,
    },
    "levelUnit": "cm",
    "location": Object {
      "coordinates": Array [
        1.1,
        2.2,
        3.3,
      ],
      "kind": "gauge",
    },
    "name": "Galicia gauge 1",
    "source": Object {
      "name": "Galicia",
      "termsOfUse": "Terms of use for Galicia",
    },
    "url": "http://ya.ru",
  },
  "helpNeeded": "fix take-out",
  "hidden": false,
  "levels": Object {
    "approximate": false,
    "formula": null,
    "impossible": null,
    "maximum": null,
    "minimum": 100,
    "optimum": null,
  },
  "license": Object {
    "name": "Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)",
    "slug": "CC_BY-SA",
    "url": "https://creativecommons.org/licenses/by-sa/4.0/",
  },
  "media": Object {
    "count": 1,
    "nodes": Array [
      Object {
        "copyright": "Video 2 copyright",
        "description": "Video 2 description",
        "kind": "video",
        "license": null,
        "resolution": Array [
          1920,
          1080,
        ],
        "url": "http://some2.video",
        "weight": 0,
      },
    ],
  },
  "name": "Playrun",
  "pois": Array [
    Object {
      "coordinates": Array [
        2.1,
        2.3,
        3.4,
      ],
      "description": "Updated poi description ",
      "kind": "other",
      "name": "Updated poi name",
    },
    Object {
      "coordinates": Array [
        66,
        77,
        0,
      ],
      "description": "Updated new poi 1 description",
      "kind": "portage",
      "name": "Updated new poi 1 name",
    },
    Object {
      "coordinates": Array [
        50.1,
        50.2,
        333,
      ],
      "description": "Updated new poi 2 description",
      "kind": "other",
      "name": "Updated new poi 2 name",
    },
  ],
  "putIn": Object {
    "coordinates": Array [
      33,
      33,
      0,
    ],
    "kind": "put-in",
  },
  "rating": 5,
  "region": Object {},
  "river": Object {
    "altNames": Array [],
    "name": "Beca",
  },
  "season": "Playrun season",
  "seasonNumeric": Array [
    1,
    2,
    3,
  ],
  "shape": Array [
    Array [
      33,
      33,
      0,
    ],
    Array [
      34,
      42,
      0,
    ],
    Array [
      34,
      43,
      0,
    ],
  ],
  "tags": Array [
    Object {
      "category": "kayaking",
      "name": "Creeking",
    },
    Object {
      "category": "hazards",
      "name": "Undercuts",
    },
    Object {
      "category": "supply",
      "name": "Snowmelt",
    },
  ],
  "takeOut": Object {
    "coordinates": Array [
      34,
      43,
      0,
    ],
    "kind": "take-out",
  },
  "verified": true,
}
`;
